WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126635
Fix some compilation warnings
https://bugs.webkit.org/show_bug.cgi?id=126635
Summary
Fix some compilation warnings
Alberto Garcia
Reported
2014-01-08 03:10:21 PST
Remove some code that is no longer being used.
Attachments
Patch
(4.16 KB, patch)
2014-01-08 03:12 PST
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2014-01-08 03:12:08 PST
Created
attachment 220620
[details]
Patch
Sergio Villar Senin
Comment 2
2014-01-08 04:51:51 PST
Comment on
attachment 220620
[details]
Patch nice cleanup
Csaba Osztrogonác
Comment 3
2014-01-08 07:11:46 PST
Comment on
attachment 220620
[details]
Patch rs=me
WebKit Commit Bot
Comment 4
2014-01-08 07:20:59 PST
Comment on
attachment 220620
[details]
Patch Clearing flags on attachment: 220620 Committed
r161500
: <
http://trac.webkit.org/changeset/161500
>
WebKit Commit Bot
Comment 5
2014-01-08 07:21:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug