Fix some compilation warnings https://bugs.webkit.org/show_bug.cgi?id=126635

Reviewed by Csaba Osztrogonác.

Source/WebCore:

Remove code that is no longer being used.

* platform/graphics/cairo/GraphicsContextCairo.cpp:
* platform/graphics/texmap/GraphicsLayerTextureMapper.h:
* platform/gtk/PopupMenuGtk.cpp:
* platform/gtk/RedirectedXCompositeWindow.h:

Tools:

* GtkLauncher/main.c:
(createWindow): This function is not supposed to receive any
parameter, yet we are passing one.


Canonical link: https://commits.webkit.org/144533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161500 268f45cc-cd09-0410-ab3c-d52691b4dbfc